- Fixed badge layout issue - Fixed selection issue with multiselect and expandable rows

--- a/sass/controls/_datagrid.scss
+++ b/sass/controls/_datagrid.scss
@@ -171,7 +171,7 @@ $datagrid-header-height: 40px;
     .datagrid-alert-icon {
       display: inline-block;
       height: 20px;
-      top: 4px;
+      top: 12px;
     }
 
     .badge {
